--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <!--START FOOTER SECTION-->
         <footer class="text-center">
-            <p> ©2021. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+            <p> ©2021. Penguin Fashion. All rights reserved. Sofia, Bulgaria.</p>
         </footer>
         <!--END FOOTER SECTION-->
     </div>
